--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,6 +51,8 @@
                         <input name="searchString" type="text" class="form-control" placeholder="Search for a Game" />
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
                     </form>
+                    <a class="btn btn-outline-secondary" asp-controller="User" asp-action="Login">login</a>
+                    <a class="btn btn-outline-secondary" asp-controller="User" asp-action="Signup">Signup</a>
 
                 </div>
             </div>
